--- a/pom.xml
+++ b/pom.xml
@@ -27,13 +27,13 @@
 	
 	<distributionManagement>
 		 <snapshotRepository>
-		    <id>nexusRepo</id>
-		    <url>http://172.31.35.227:8081/repository/sample-snapshot/</url>
+		    <id>nagaRepo</id>
+		    <url>http://172.31.47.16:8081/repository/naga-snapshot/</url>
 		 </snapshotRepository>
 		
 		<repository>
-		    <id>nexusRepo</id>
-		    <url>http://172.31.35.227:8081/repository/sample-release/</url>
+		    <id>nagaRepo</id>
+		    <url>http://172.31.47.16:8081/repository/naga-release/</url>
 		</repository>
   	</distributionManagement>
 	
