--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://54.82.60.232:9000/</sonar.host.url>
+		<sonar.host.url>http://http://3.82.10.101:9000/</sonar.host.url>
 
 	</properties>
 	<dependencies>
@@ -27,13 +27,13 @@
 	
 	<distributionManagement>
 		 <snapshotRepository>
-		    <id>nagaRepo</id>
-		    <url>http://172.31.47.16:8081/repository/naga-snapshots/</url>
+		    <id>nexusRepo</id>
+		    <url>http://http://3.94.252.52:8081/repository/sample-snapshots/</url>
 		 </snapshotRepository>
 		
 		<repository>
-		    <id>nagaRepo</id>
-		    <url>http://172.31.47.16:8081/repository/naga-releases/</url>
+			<id>nexusRepo</id>
+		    <url>http://http://3.94.252.52:8081/repository/sample-releases/</url>
 		</repository>
   	</distributionManagement>
 	
