--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	
 	<properties>
 		<docker.image.prefix>kammana</docker.image.prefix>
-		<sonar.host.url>http://http://34.229.45.149:9000/</sonar.host.url>
+		<sonar.host.url>http://34.229.45.149:9000/</sonar.host.url>
 
 	</properties>
 	<dependencies>
